add twitter bot

--- a/bbknikola.ipynb
+++ b/bbknikola.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 134,
    "metadata": {
     "collapsed": false
    },
@@ -40,12 +40,13 @@
     "import getpass\n",
     "from walkdir import filtered_walk, dir_paths, all_paths, file_paths\n",
     "import arrow\n",
-    "#import nikola\n"
+    "#import nikola\n",
+    "from TwitterFollowBot import TwitterBot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
@@ -56,7 +57,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 139,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "bro_bot = TwitterBot('/home/wcmckee/wcmnot/wcmckee-notebook/config.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Choosing time between 10 and 60 - waiting 38 seconds before action\n",
+      "Followed chrishannah\n",
+      "Choosing time between 10 and 60 - waiting 19 seconds before action\n",
+      "Followed Goombuster\n",
+      "Choosing time between 10 and 60 - waiting 23 seconds before action\n",
+      "Followed Isma_Na22\n",
+      "Choosing time between 10 and 60 - waiting 10 seconds before action\n",
+      "Followed willeastcott\n",
+      "Choosing time between 10 and 60 - waiting 52 seconds before action\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-141-f3f3e1fe1559>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mbro_bot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mauto_follow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'#ld33'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m/usr/local/lib/python3.4/dist-packages/TwitterFollowBot/__init__.py\u001b[0m in \u001b[0;36mauto_follow\u001b[1;34m(self, phrase, count, result_type)\u001b[0m\n\u001b[0;32m    294\u001b[0m                         tweet[\"user\"][\"id\"] not in do_not_follow):\n\u001b[0;32m    295\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 296\u001b[1;33m                     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwait_on_action\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    297\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    298\u001b[0m                     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTWITTER_CONNECTION\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfriendships\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcreate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0muser_id\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtweet\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"user\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"id\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfollow\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/usr/local/lib/python3.4/dist-packages/TwitterFollowBot/__init__.py\u001b[0m in \u001b[0;36mwait_on_action\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     63\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mwait_time\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     64\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Choosing time between %d and %d - waiting %d seconds before action\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mmin_time\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax_time\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwait_time\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 65\u001b[1;33m             \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwait_time\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     66\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mwait_time\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "bro_bot.auto_follow('#ld33')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
    "metadata": {
     "collapsed": true
    },
@@ -68,29 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'21:20:46'"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "returntime()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
@@ -104,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 105,
    "metadata": {
     "collapsed": true
    },
@@ -115,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 106,
    "metadata": {
     "collapsed": false
    },
@@ -126,29 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2015/08/23 21:20:46'"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fultim"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 107,
    "metadata": {
     "collapsed": false
    },
@@ -159,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 108,
    "metadata": {
     "collapsed": true
    },
@@ -170,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 109,
    "metadata": {
     "collapsed": false
    },
@@ -181,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 110,
    "metadata": {
     "collapsed": false
    },
@@ -192,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 111,
    "metadata": {
     "collapsed": false
    },
@@ -205,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 112,
    "metadata": {
     "collapsed": true
    },
@@ -221,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 113,
    "metadata": {
     "collapsed": false
    },
@@ -230,7 +247,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name of file to blog: nikolatest\n"
+      "Name of file to blog: monster-sync-warped\n"
      ]
     }
    ],
@@ -240,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 114,
    "metadata": {
     "collapsed": false
    },
@@ -259,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 115,
    "metadata": {
     "collapsed": false
    },
@@ -268,7 +285,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "post tags: nikola, wordpress, php\n"
+      "post tags: story, gamejam, jd33\n"
      ]
     }
    ],
@@ -278,7 +295,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'contributors': None,\n",
+       " 'coordinates': None,\n",
+       " 'created_at': 'Sun Aug 23 10:56:27 +0000 2015',\n",
+       " 'entities': {'hashtags': [], 'symbols': [], 'urls': [], 'user_mentions': []},\n",
+       " 'favorite_count': 0,\n",
+       " 'favorited': False,\n",
+       " 'geo': None,\n",
+       " 'id': 635405234076934144,\n",
+       " 'id_str': '635405234076934144',\n",
+       " 'in_reply_to_screen_name': None,\n",
+       " 'in_reply_to_status_id': None,\n",
+       " 'in_reply_to_status_id_str': None,\n",
+       " 'in_reply_to_user_id': None,\n",
+       " 'in_reply_to_user_id_str': None,\n",
+       " 'is_quote_status': False,\n",
+       " 'lang': 'en',\n",
+       " 'place': None,\n",
+       " 'retweet_count': 0,\n",
+       " 'retweeted': False,\n",
+       " 'source': '<a href=\"http://brobeur.com\" rel=\"nofollow\">brobeurtweet</a>',\n",
+       " 'text': 'monster-sync-warped story, gamejam, jd33http://brobeur.com/blog/output/monster-sync-warped.html',\n",
+       " 'truncated': False,\n",
+       " 'user': {'contributors_enabled': False,\n",
+       "  'created_at': 'Sat Mar 30 01:44:05 +0000 2013',\n",
+       "  'default_profile': False,\n",
+       "  'default_profile_image': False,\n",
+       "  'description': 'Video Game Development. #gamedev #linux #getsdrawn',\n",
+       "  'entities': {'description': {'urls': []},\n",
+       "   'url': {'urls': [{'display_url': 'brobeur.com',\n",
+       "      'expanded_url': 'http://brobeur.com',\n",
+       "      'indices': [0, 22],\n",
+       "      'url': 'http://t.co/KRO9XPRA01'}]}},\n",
+       "  'favourites_count': 12,\n",
+       "  'follow_request_sent': False,\n",
+       "  'followers_count': 621,\n",
+       "  'following': False,\n",
+       "  'friends_count': 656,\n",
+       "  'geo_enabled': False,\n",
+       "  'has_extended_profile': False,\n",
+       "  'id': 1315550370,\n",
+       "  'id_str': '1315550370',\n",
+       "  'is_translation_enabled': False,\n",
+       "  'is_translator': False,\n",
+       "  'lang': 'en',\n",
+       "  'listed_count': 37,\n",
+       "  'location': 'Hamilton, New Zealand',\n",
+       "  'name': 'BroBeur.com',\n",
+       "  'notifications': False,\n",
+       "  'profile_background_color': 'C0DEED',\n",
+       "  'profile_background_image_url': 'http://abs.twimg.com/images/themes/theme1/bg.png',\n",
+       "  'profile_background_image_url_https': 'https://abs.twimg.com/images/themes/theme1/bg.png',\n",
+       "  'profile_background_tile': False,\n",
+       "  'profile_banner_url': 'https://pbs.twimg.com/profile_banners/1315550370/1431862528',\n",
+       "  'profile_image_url': 'http://pbs.twimg.com/profile_images/487211737284739072/HBzP949-_normal.png',\n",
+       "  'profile_image_url_https': 'https://pbs.twimg.com/profile_images/487211737284739072/HBzP949-_normal.png',\n",
+       "  'profile_link_color': '300808',\n",
+       "  'profile_sidebar_border_color': 'C0DEED',\n",
+       "  'profile_sidebar_fill_color': 'DDEEF6',\n",
+       "  'profile_text_color': '333333',\n",
+       "  'profile_use_background_image': True,\n",
+       "  'protected': False,\n",
+       "  'screen_name': 'brobeur',\n",
+       "  'statuses_count': 1105,\n",
+       "  'time_zone': 'Auckland',\n",
+       "  'url': 'http://t.co/KRO9XPRA01',\n",
+       "  'utc_offset': 43200,\n",
+       "  'verified': False}}"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bro_bot.send_tweet(nbog + ' ' + tagmak + ' http://brobeur.com/blog/output/' + nbog + '.html')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
    "metadata": {
     "collapsed": false
    },
@@ -287,7 +410,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "path to search: /home/wcmckee/\n"
+      "path to search: /home/wcmckee\n"
      ]
     }
    ],
@@ -297,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 117,
    "metadata": {
     "collapsed": false
    },
@@ -309,42 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'date': '2015/08/23',\n",
-       " 'filename': 'nikolatest.rst',\n",
-       " 'path': '/home/wcmckee/',\n",
-       " 'tags': 'nikola, wordpress, php',\n",
-       " 'time': '21:20:46'}"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "jsve"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 118,
    "metadata": {
     "collapsed": true
    },
@@ -355,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 119,
    "metadata": {
     "collapsed": true
    },
@@ -366,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 120,
    "metadata": {
     "collapsed": false
    },
@@ -377,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 121,
    "metadata": {
     "collapsed": false
    },
@@ -386,7 +474,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/wcmckee/brobeurpost/nikolatest.rst\n"
+      "/home/wcmckee/brobeurpost/monster-sync-warped.rst\n"
      ]
     }
    ],
@@ -398,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 122,
    "metadata": {
     "collapsed": false
    },
@@ -406,35 +494,21 @@
     {
      "data": {
       "text/plain": [
-       "{'date': '2015/08/23',\n",
-       " 'filefound': '/home/wcmckee/brobeurpost/nikolatest.rst',\n",
-       " 'filename': 'nikolatest.rst',\n",
-       " 'path': '/home/wcmckee/',\n",
-       " 'tags': 'nikola, wordpress, php',\n",
-       " 'time': '21:20:46'}"
+       "'/home/wcmckee/brobeurpost/monster-sync-warped.rst'"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "jsve"
+    "jsve['filefound']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 123,
    "metadata": {
     "collapsed": true
    },
@@ -445,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 124,
    "metadata": {
     "collapsed": true
    },
@@ -456,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 125,
    "metadata": {
     "collapsed": false
    },
@@ -475,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 126,
    "metadata": {
     "collapsed": false
    },
@@ -486,16 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 127,
    "metadata": {
     "collapsed": true
    },
@@ -506,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 128,
    "metadata": {
     "collapsed": false
    },
@@ -514,10 +579,10 @@
     {
      "data": {
       "text/plain": [
-       "<generator object file_paths at 0xb2894874>"
+       "<generator object file_paths at 0xb2894b94>"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,78 +593,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 129,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.system('cp ' + jsve['filefound'] + ' ' + postsdir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "for fie in files:\n",
+    "#for fie in files:\n",
     "    #print fie\n",
-    "    print (fie)\n",
-    "    print ('Copy ' + fie + ' to ' + postsdir)\n",
-    "    os.system('cp ' + fie + ' ' + postsdir)"
+    "    #print (fie)\n",
+    "    #print ('Copy ' + fie + ' to ' + postsdir)\n",
+    "    #os.system('cp ' + fie + ' ' + postsdir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/wcmckee/github/brobeurdotcom\n"
-     ]
-    }
-   ],
-   "source": [
-    "print (podir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "nikolatest\n"
-     ]
-    }
-   ],
-   "source": [
-    "print (nbog)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 131,
    "metadata": {
     "collapsed": true
    },
@@ -613,16 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 132,
    "metadata": {
     "collapsed": false
    },
@@ -633,7 +655,7 @@
        "0"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
