add hashtags tweet

--- a/bbknikola.ipynb
+++ b/bbknikola.ipynb
@@ -295,6 +295,142 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "my_list = tagmak.split(\",\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['story', ' gamejam', ' jd33']"
+      ]
+     },
+     "execution_count": 155,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "hashtag = list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for myl in my_list:\n",
+    "    #print ('#' + myl.replace(' ', ''))\n",
+    "    hashtag.append(('#' + myl.replace(' ', '')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#story\n",
+      "Choosing time between 10 and 60 - waiting 52 seconds before action\n",
+      "Followed Morilla_\n",
+      "#gamejam\n",
+      "Choosing time between 10 and 60 - waiting 50 seconds before action\n",
+      "Followed GamingMuchroom\n",
+      "#jd33\n"
+     ]
+    }
+   ],
+   "source": [
+    "for has in hashtag:\n",
+    "    print (has)\n",
+    "    bro_bot.auto_follow(has, count=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Have hashtags in a list that I want converted to single string. Space between each hash. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "endstring = ''\n",
+    "for s in hashtag:\n",
+    "    endstring += s + ' '\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'#story #gamejam #jd33 '"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "endstring"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -304,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 172,
    "metadata": {
     "collapsed": false
    },
@@ -314,13 +450,21 @@
       "text/plain": [
        "{'contributors': None,\n",
        " 'coordinates': None,\n",
-       " 'created_at': 'Sun Aug 23 10:56:27 +0000 2015',\n",
-       " 'entities': {'hashtags': [], 'symbols': [], 'urls': [], 'user_mentions': []},\n",
+       " 'created_at': 'Sun Aug 23 11:18:20 +0000 2015',\n",
+       " 'entities': {'hashtags': [{'indices': [20, 26], 'text': 'story'},\n",
+       "   {'indices': [27, 35], 'text': 'gamejam'},\n",
+       "   {'indices': [36, 41], 'text': 'jd33'}],\n",
+       "  'symbols': [],\n",
+       "  'urls': [{'display_url': 'brobeur.com/blog/output/po…',\n",
+       "    'expanded_url': 'http://brobeur.com/blog/output/posts/monster-sync-warped.html',\n",
+       "    'indices': [43, 65],\n",
+       "    'url': 'http://t.co/LwGu5ZL7aF'}],\n",
+       "  'user_mentions': []},\n",
        " 'favorite_count': 0,\n",
        " 'favorited': False,\n",
        " 'geo': None,\n",
-       " 'id': 635405234076934144,\n",
-       " 'id_str': '635405234076934144',\n",
+       " 'id': 635410739881074689,\n",
+       " 'id_str': '635410739881074689',\n",
        " 'in_reply_to_screen_name': None,\n",
        " 'in_reply_to_status_id': None,\n",
        " 'in_reply_to_status_id_str': None,\n",
@@ -329,10 +473,11 @@
        " 'is_quote_status': False,\n",
        " 'lang': 'en',\n",
        " 'place': None,\n",
+       " 'possibly_sensitive': False,\n",
        " 'retweet_count': 0,\n",
        " 'retweeted': False,\n",
        " 'source': '<a href=\"http://brobeur.com\" rel=\"nofollow\">brobeurtweet</a>',\n",
-       " 'text': 'monster-sync-warped story, gamejam, jd33http://brobeur.com/blog/output/monster-sync-warped.html',\n",
+       " 'text': 'monster-sync-warped #story #gamejam #jd33  http://t.co/LwGu5ZL7aF',\n",
        " 'truncated': False,\n",
        " 'user': {'contributors_enabled': False,\n",
        "  'created_at': 'Sat Mar 30 01:44:05 +0000 2013',\n",
@@ -348,7 +493,7 @@
        "  'follow_request_sent': False,\n",
        "  'followers_count': 621,\n",
        "  'following': False,\n",
-       "  'friends_count': 656,\n",
+       "  'friends_count': 659,\n",
        "  'geo_enabled': False,\n",
        "  'has_extended_profile': False,\n",
        "  'id': 1315550370,\n",
@@ -374,20 +519,20 @@
        "  'profile_use_background_image': True,\n",
        "  'protected': False,\n",
        "  'screen_name': 'brobeur',\n",
-       "  'statuses_count': 1105,\n",
+       "  'statuses_count': 1106,\n",
        "  'time_zone': 'Auckland',\n",
        "  'url': 'http://t.co/KRO9XPRA01',\n",
        "  'utc_offset': 43200,\n",
        "  'verified': False}}"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bro_bot.send_tweet(nbog + ' ' + tagmak + ' http://brobeur.com/blog/output/' + nbog + '.html')"
+    "bro_bot.send_tweet(nbog + ' ' + endstring + ' http://brobeur.com/blog/output/posts/' + nbog + '.html')"
    ]
   },
   {
