--- a/bbknikola.ipynb
+++ b/bbknikola.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -220,7 +220,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name of file to blog: tiredraid\n"
+      "Name of file to blog: testpost\n"
      ]
     }
    ],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -258,7 +258,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "post tags: sleep, tired\n"
+      "post tags: testing, post\n"
      ]
     }
    ],
@@ -268,7 +268,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 89,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#pear = input('path to search: ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "jsve = dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -277,7 +299,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Write content? y/N \n"
+      "Write content? y/N n\n",
+      "path to search: /home/wcmckee\n",
+      "/home/wcmckee/brobeurpost/testpost.rst\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'postsdir' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-39-070e51f71d91>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mfil\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[0mjsve\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m'filefound'\u001b[0m \u001b[1;33m:\u001b[0m \u001b[0mfil\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m     \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msystem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'cp '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mjsve\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'filefound'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m' '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mpostsdir\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'postsdir' is not defined"
      ]
     }
    ],
@@ -287,8 +322,13 @@
     "writecont = input('Write content? y/N ')\n",
     "if 'y' in writecont:\n",
     "    contenmak = input('content: ')\n",
+    "\n",
     "else:\n",
-    "    pass"
+    "    pear = input('path to search: ')\n",
+    "    files = file_paths(filtered_walk(pear, depth=100, included_files=[nbog + etnam]))\n",
+    "    for fil in files:\n",
+    "        print (fil)\n",
+    "        jsve.update({'filefound' : fil})\n"
    ]
   },
   {
@@ -461,7 +501,7 @@
     }
    ],
    "source": [
-    "bro_bot = TwitterBot('/home/wcmckee/wcmnot/wcmckee-notebook/config.txt')\n",
+    "#bro_bot = TwitterBot('/home/wcmckee/wcmnot/wcmckee-notebook/config.txt')\n",
     "#bro_ot = TwitterBot(podir + '/config.txt')"
    ]
   },
@@ -486,9 +526,9 @@
     }
    ],
    "source": [
-    "for has in hashtag:\n",
-    "    print (has)\n",
-    "    bro_bot.auto_follow(has, count=1)"
+    "#for has in hashtag:\n",
+    "#    print (has)\n",
+    "#    bro_bot.auto_follow(has, count=1)"
    ]
   },
   {
@@ -535,17 +575,6 @@
    },
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#pear = input('path to search: ')"
-   ]
   },
   {
    "cell_type": "code",
@@ -650,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -661,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -672,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -687,46 +716,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "oprst = open(podir + '/posts/' + nbog + etnam, 'w')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "130"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "oprst.write(contenmak)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
-    "oprst.close()"
+    "if 'y' in writecont:\n",
+    "    oprst = open(podir + '/posts/' + nbog + etnam, 'w')\n",
+    "    oprst.write(contenmak)\n",
+    "    oprst.close()\n",
+    "else:\n",
+    "    os.system('cp ' + jsve['filefound'] + ' ' + postsdir)"
    ]
   },
   {
@@ -759,7 +769,7 @@
     }
    ],
    "source": [
-    "print (podir + '/posts/' + nbog + '.meta')"
+    "#print (podir + '/posts/' + nbog + '.meta')"
    ]
   },
   {
@@ -781,8 +791,8 @@
     }
    ],
    "source": [
-    "os.chdir(podir)\n",
-    "os.system('nikola build')"
+    "#os.chdir(podir)\n",
+    "#os.system('nikola build')"
    ]
   },
   {
@@ -804,7 +814,7 @@
     }
    ],
    "source": [
-    "os.system('rsync -azP ' + postsdir + ' ' + 'wcmckee@brobeur.com:/home/wcmckee/bb/blog/posts')"
+    "#os.system('rsync -azP ' + postsdir + ' ' + 'wcmckee@brobeur.com:/home/wcmckee/bb/blog/posts')"
    ]
   },
   {
