--- a/twitfol.ipynb
+++ b/twitfol.ipynb
@@ -43,17 +43,19 @@
    },
    "outputs": [],
    "source": [
-    "my_bot = TwitterBot('/home/wcmckee/brobeur.txt')"
+    "bb_bot = TwitterBot('/home/wcmckee/brobeur-tweet/brobeur.txt')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "wcm_bot = TwitterBot('/home/wcmckee/wcm-tweet/config.txt')"
+   ]
   },
   {
    "cell_type": "code",
@@ -68,6 +70,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "wcmsubreds = ['python', 'ipython', 'webdev', 'coding', 'databases', 'hacking', 'haskell', 'linux']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 49,
    "metadata": {
     "collapsed": true
@@ -75,6 +88,28 @@
    "outputs": [],
    "source": [
     "scribred = ['writing', 'gaming', 'InternetIsBeautiful', 'Minecraft', 'skyrim', 'linux', 'opensource', 'wow']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "wcmrasub = random.choice(wcmsubreds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "hashwcm = ('#' + wcmrasub)"
    ]
   },
   {
@@ -134,12 +169,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "getwcms = r.get_subreddit(wcmrasub)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "twcm = getwcms.get_random_submission()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "wtit = twcm.title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "wurl = twcm.url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'contributors': None,\n",
+       " 'coordinates': None,\n",
+       " 'created_at': 'Thu Oct 08 04:30:58 +0000 2015',\n",
+       " 'entities': {'hashtags': [{'indices': [45, 53], 'text': 'ipython'}],\n",
+       "  'symbols': [],\n",
+       "  'urls': [{'display_url': 'reddit.com/r/IPython/comm…',\n",
+       "    'expanded_url': 'https://www.reddit.com/r/IPython/comments/2zje3g/parallel_programming/',\n",
+       "    'indices': [21, 44],\n",
+       "    'url': 'https://t.co/FtXRLA6t3p'}],\n",
+       "  'user_mentions': []},\n",
+       " 'favorite_count': 0,\n",
+       " 'favorited': False,\n",
+       " 'geo': None,\n",
+       " 'id': 651978066793644032,\n",
+       " 'id_str': '651978066793644032',\n",
+       " 'in_reply_to_screen_name': None,\n",
+       " 'in_reply_to_status_id': None,\n",
+       " 'in_reply_to_status_id_str': None,\n",
+       " 'in_reply_to_user_id': None,\n",
+       " 'in_reply_to_user_id_str': None,\n",
+       " 'is_quote_status': False,\n",
+       " 'lang': 'et',\n",
+       " 'place': None,\n",
+       " 'possibly_sensitive': False,\n",
+       " 'retweet_count': 0,\n",
+       " 'retweeted': False,\n",
+       " 'source': '<a href=\"http://brobeur.com\" rel=\"nofollow\">brobeurtweet</a>',\n",
+       " 'text': 'Parallel programming https://t.co/FtXRLA6t3p #ipython',\n",
+       " 'truncated': False,\n",
+       " 'user': {'contributors_enabled': False,\n",
+       "  'created_at': 'Sat Mar 30 01:44:05 +0000 2013',\n",
+       "  'default_profile': False,\n",
+       "  'default_profile_image': False,\n",
+       "  'description': 'Video Game Development. #gamedev #linux #getsdrawn',\n",
+       "  'entities': {'description': {'urls': []},\n",
+       "   'url': {'urls': [{'display_url': 'brobeur.com',\n",
+       "      'expanded_url': 'http://brobeur.com',\n",
+       "      'indices': [0, 22],\n",
+       "      'url': 'http://t.co/KRO9XPRA01'}]}},\n",
+       "  'favourites_count': 14,\n",
+       "  'follow_request_sent': False,\n",
+       "  'followers_count': 1058,\n",
+       "  'following': False,\n",
+       "  'friends_count': 2000,\n",
+       "  'geo_enabled': False,\n",
+       "  'has_extended_profile': False,\n",
+       "  'id': 1315550370,\n",
+       "  'id_str': '1315550370',\n",
+       "  'is_translation_enabled': False,\n",
+       "  'is_translator': False,\n",
+       "  'lang': 'en',\n",
+       "  'listed_count': 110,\n",
+       "  'location': 'Hamilton, New Zealand',\n",
+       "  'name': 'BroBeur.com',\n",
+       "  'notifications': False,\n",
+       "  'profile_background_color': 'C0DEED',\n",
+       "  'profile_background_image_url': 'http://abs.twimg.com/images/themes/theme1/bg.png',\n",
+       "  'profile_background_image_url_https': 'https://abs.twimg.com/images/themes/theme1/bg.png',\n",
+       "  'profile_background_tile': False,\n",
+       "  'profile_banner_url': 'https://pbs.twimg.com/profile_banners/1315550370/1431862528',\n",
+       "  'profile_image_url': 'http://pbs.twimg.com/profile_images/487211737284739072/HBzP949-_normal.png',\n",
+       "  'profile_image_url_https': 'https://pbs.twimg.com/profile_images/487211737284739072/HBzP949-_normal.png',\n",
+       "  'profile_link_color': '300808',\n",
+       "  'profile_sidebar_border_color': 'C0DEED',\n",
+       "  'profile_sidebar_fill_color': 'DDEEF6',\n",
+       "  'profile_text_color': '333333',\n",
+       "  'profile_use_background_image': True,\n",
+       "  'protected': False,\n",
+       "  'screen_name': 'brobeur',\n",
+       "  'statuses_count': 10222,\n",
+       "  'time_zone': 'Wellington',\n",
+       "  'url': 'http://t.co/KRO9XPRA01',\n",
+       "  'utc_offset': 46800,\n",
+       "  'verified': False}}"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wcm_bot.send_tweet(wtit + ' ' + wurl + ' ' + hashwcm)"
+   ]
   },
   {
    "cell_type": "code",
@@ -278,7 +443,7 @@
     }
    ],
    "source": [
-    "my_bot.send_tweet(gtia + ' ' + gurl + ' ' + hashse)"
+    "bb.send_tweet(gtia + ' ' + gurl + ' ' + hashse)"
    ]
   },
   {
@@ -362,6 +527,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "wcmretw = ['#ForgeConf', '#lascot15', '#code', '#programming', '#linux']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 66,
    "metadata": {
     "collapsed": true
@@ -373,13 +549,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "bbranrt = random.choice(tweval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "wcretw = random.choice(wcmretw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 67,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "my_bot.auto_rt(tweval, count = 1 )"
+    "bb_bot.auto_rt(tweval, count = 1 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Retweeted: b'RT @lq_feed: How to configure LDAP login http://t.co/d61Fsc8IF7 #Linux'\n"
+     ]
+    }
+   ],
+   "source": [
+    "wcm_bot.auto_rt(wcretw, count= 1 )"
    ]
   },
   {
