--- a/bbknikola.ipynb
+++ b/bbknikola.ipynb
@@ -64,18 +64,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 135,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "raw = arrow.utcnow()"
+    "raw = arrow.now()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 136,
    "metadata": {
     "collapsed": true
    },
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 137,
    "metadata": {
     "collapsed": false
    },
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 138,
    "metadata": {
     "collapsed": true
    },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 139,
    "metadata": {
     "collapsed": false
    },
@@ -120,6 +120,57 @@
    "source": [
     "fultim = fulda + ' ' + returntime()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "datim = str(raw.datetime)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2015/10/09 13:28:13'"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fultim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -196,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 83,
    "metadata": {
     "collapsed": false
    },
@@ -205,7 +256,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "blog dir: /home/wcmckee/github/wcm.com/\n"
+      "blog dir: /home/wcmckee/writersdenhamilton/\n"
      ]
     }
    ],
@@ -215,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false
    },
@@ -224,7 +275,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name of file to blog: ccslis\n"
+      "Name of file to blog: sherlock\n"
      ]
     }
    ],
@@ -234,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 85,
    "metadata": {
     "collapsed": false
    },
@@ -243,7 +294,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extension of file to blog: .ipynb\n"
+      "Extension of file to blog: .rst\n"
      ]
     }
    ],
@@ -253,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 86,
    "metadata": {
     "collapsed": false
    },
@@ -262,7 +313,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "post tags: python, pandas, numpy, twitter\n"
+      "post tags: notes\n"
      ]
     }
    ],
@@ -272,7 +323,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 87,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "post author: wcmckee\n"
+     ]
+    }
+   ],
+   "source": [
+    "catmak = input('post author: ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "rstme = ('.. title: ' + nbog + ' \\n' + '.. slug: ' + nbog + ' \\n' + '.. date: ' + fultim + ' \\n' + '.. author: ' + catmak)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
    "metadata": {
     "collapsed": false
    },
@@ -283,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 90,
    "metadata": {
     "collapsed": true
    },
@@ -294,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false
    },
@@ -302,10 +392,10 @@
     {
      "data": {
       "text/plain": [
-       "'ccslis.ipynb'"
+       "'sherlock.rst'"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 92,
    "metadata": {
     "collapsed": false
    },
@@ -327,7 +417,7 @@
      "text": [
       "Write content? y/N \n",
       "path to search: y/N\n",
-      "path of file: /home/wcmckee/github/ece-display/\n"
+      "path of file: /home/wcmckee/bbpost/\n"
      ]
     }
    ],
@@ -353,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 93,
    "metadata": {
     "collapsed": false
    },
@@ -364,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 94,
    "metadata": {
     "collapsed": true
    },
@@ -375,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 95,
    "metadata": {
     "collapsed": false
    },
@@ -383,15 +473,10 @@
     {
      "data": {
       "text/plain": [
-       "{'blogdir': '/home/wcmckee/github/wcm.com/',\n",
-       " 'date': '2015/09/29',\n",
-       " 'filefound': '/home/wcmckee/github/ece-display/ccslis.ipynb',\n",
-       " 'filename': 'ccslis.ipynb',\n",
-       " 'tags': 'python, pandas, numpy, twitter',\n",
-       " 'time': '20:09:44'}"
+       "{'filefound': '/home/wcmckee/bbpost/sherlock.rst'}"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 96,
    "metadata": {
     "collapsed": false
    },
@@ -413,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 97,
    "metadata": {
     "collapsed": false
    },
@@ -424,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false
    },
@@ -435,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 99,
    "metadata": {
     "collapsed": false
    },
@@ -455,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 100,
    "metadata": {
     "collapsed": false
    },
@@ -466,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 101,
    "metadata": {
     "collapsed": false
    },
@@ -477,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
@@ -485,10 +570,10 @@
     {
      "data": {
       "text/plain": [
-       "['python', ' pandas', ' numpy', ' twitter']"
+       "['notes']"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 103,
    "metadata": {
     "collapsed": true
    },
@@ -510,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
@@ -523,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 105,
    "metadata": {
     "collapsed": false
    },
@@ -535,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 106,
    "metadata": {
     "collapsed": false
    },
@@ -548,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 107,
    "metadata": {
     "collapsed": true
    },
@@ -562,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 108,
    "metadata": {
     "collapsed": false
    },
@@ -570,10 +655,10 @@
     {
      "data": {
       "text/plain": [
-       "'#python #pandas #numpy #twitter '"
+       "'#notes '"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,18 +678,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 109,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "jsve.update({'filename' : nbog + etnam, 'tags' : tagmak, 'date' : fulda, 'time' : returntime()})"
+    "jsve.update({'filename' : nbog + etnam, 'tags' : tagmak, 'datetime' : datim})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 110,
    "metadata": {
     "collapsed": true
    },
@@ -615,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 111,
    "metadata": {
     "collapsed": false
    },
@@ -623,15 +708,13 @@
     {
      "data": {
       "text/plain": [
-       "{'blogdir': '/home/wcmckee/github/wcm.com/',\n",
-       " 'date': '2015/09/29',\n",
-       " 'filefound': '/home/wcmckee/github/ece-display/ccslis.ipynb',\n",
-       " 'filename': 'ccslis.ipynb',\n",
-       " 'tags': 'python, pandas, numpy, twitter',\n",
-       " 'time': '20:09:44'}"
+       "{'datetime': '2015-10-09 00:07:13.070409+00:00',\n",
+       " 'filefound': '/home/wcmckee/bbpost/sherlock.rst',\n",
+       " 'filename': 'sherlock.rst',\n",
+       " 'tags': 'notes'}"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 112,
    "metadata": {
     "collapsed": true
    },
@@ -653,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 113,
    "metadata": {
     "collapsed": true
    },
@@ -664,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 114,
    "metadata": {
     "collapsed": false
    },
@@ -675,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 115,
    "metadata": {
     "collapsed": false
    },
@@ -688,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 116,
    "metadata": {
     "collapsed": false
    },
@@ -699,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 117,
    "metadata": {
     "collapsed": true
    },
@@ -710,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 118,
    "metadata": {
     "collapsed": true
    },
@@ -721,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 119,
    "metadata": {
     "collapsed": false
    },
@@ -732,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 120,
    "metadata": {
     "collapsed": true
    },
@@ -743,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 121,
    "metadata": {
     "collapsed": false
    },
@@ -754,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 122,
    "metadata": {
     "collapsed": false
    },
@@ -769,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 123,
    "metadata": {
     "collapsed": false
    },
@@ -777,15 +860,14 @@
     {
      "data": {
       "text/plain": [
-       "{'blogdir': '/home/wcmckee/github/wcm.com/',\n",
-       " 'date': '2015/09/29',\n",
-       " 'filefound': '/home/wcmckee/github/ece-display/ccslis.ipynb',\n",
-       " 'filename': 'ccslis.ipynb',\n",
-       " 'tags': 'python, pandas, numpy, twitter',\n",
-       " 'time': '20:09:44'}"
+       "{'blogdir': '/home/wcmckee/writersdenhamilton/',\n",
+       " 'datetime': '2015-10-09 00:07:13.070409+00:00',\n",
+       " 'filefound': '/home/wcmckee/bbpost/sherlock.rst',\n",
+       " 'filename': 'sherlock.rst',\n",
+       " 'tags': 'notes'}"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -805,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 124,
    "metadata": {
     "collapsed": false
    },
@@ -816,7 +898,7 @@
        "0"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 125,
    "metadata": {
     "collapsed": false
    },
@@ -843,21 +925,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 150,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "opeza = open(podir + '/posts/' + nbog + '.meta', 'w')\n",
-    "opeza.write(nbog + '\\n' + nbog + '\\n' + fultim + '\\n' + tagmak)\n",
+    "opeza.write(rstme)\n",
     "\n",
     "opeza.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 127,
    "metadata": {
     "collapsed": false
    },
@@ -868,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 128,
    "metadata": {
     "collapsed": false
    },
@@ -880,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 129,
    "metadata": {
     "collapsed": false
    },
@@ -891,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 130,
    "metadata": {
     "collapsed": false
    },
@@ -902,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 131,
    "metadata": {
     "collapsed": false
    },
